--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-2.69MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-221.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.59MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-1.97MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.99MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-489.8KB/s(Youtube:不良林), server: 20.239.176.94, port: 443, type: vmess, uuid: 4adf9138-5aca-4a26-b217-335e72bb680d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.176.94}}
-  - {name: 🇫🇷 法国-681.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-3.15MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.68MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-4.36MB/s(Youtube:不良林), server: bpjcjapan.loseyourip.com, port: 12343, type: vmess, uuid: 546660e6-01ad-4eaa-a640-83864829f8f9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /images, ws-headers: {Host: bpjcjapan.loseyourip.com}}
   - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.81MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-338.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 61c4c45e-d5c8-47ed-ae28-cee95f09b3b7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇨🇳 中国-952.8KB/s(Youtube:不良林), server: bgpv2.ktyjsq.com, port: 12222, type: vmess, uuid: eddbceb6-a19e-324a-86ed-ecf4fe041656, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 捷克-2.80MB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇨🇳 中国-3.91MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.14MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-489.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-681.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-952.8KB/s(Youtube:不良林)
+      - 捷克-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-489.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-681.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-952.8KB/s(Youtube:不良林)
+      - 捷克-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-489.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-681.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-952.8KB/s(Youtube:不良林)
+      - 捷克-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-4.36MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-489.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-681.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-952.8KB/s(Youtube:不良林)
+      - 捷克-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-489.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-681.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-952.8KB/s(Youtube:不良林)
+      - 捷克-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-489.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-681.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-952.8KB/s(Youtube:不良林)
+      - 捷克-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-489.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-681.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-952.8KB/s(Youtube:不良林)
+      - 捷克-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
