--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,68 +5,67 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.05MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-4.73MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 捷克-5.22MB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇫🇷 法国-2.44MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇦 加拿大-2.18MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-6.31MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-8.06MB/s(Youtube:不良林), server: bpjcjapan.loseyourip.com, port: 12343, type: vmess, uuid: 546660e6-01ad-4eaa-a640-83864829f8f9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /images, ws-headers: {Host: bpjcjapan.loseyourip.com}}
-  - {name: 🇨🇳 中国-6.45MB/s(Youtube:不良林), server: 36.133.220.166, port: 35010, type: vmess, uuid: 92ae7550-f158-3725-b887-1666116c8db3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 捷克-5.30MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇬🇧 英国-3.08MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-9.86MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
   - {name: 🇨🇳 中国-11.35MB/s(Youtube:不良林), server: 116.63.103.11, port: 45239, type: vmess, uuid: de110f84-a480-438e-80d2-4fa897fdba9a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
   - {name: 🇻🇳 越南-1.78MB/s(Youtube:不良林), server: 103.90.220.27, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.90.220.27}}
   - {name: 🇨🇳 中国-3.02MB/s(Youtube:不良林), server: 43.154.235.119, port: 10064, type: vmess, uuid: 8b115f89-27cc-4ea9-85af-dda2de597928, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 捷克-5.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 捷克-5.30MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 台湾-9.86MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.35MB/s(Youtube:不良林)
       - 🇻🇳 越南-1.78MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 捷克-5.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 捷克-5.30MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 台湾-9.86MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.35MB/s(Youtube:不良林)
       - 🇻🇳 越南-1.78MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 捷克-5.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 捷克-5.30MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 台湾-9.86MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.35MB/s(Youtube:不良林)
       - 🇻🇳 越南-1.78MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-8.06MB/s(Youtube:不良林)
       - 🇨🇳 台湾-9.86MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 捷克-5.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 捷克-5.30MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 台湾-9.86MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.35MB/s(Youtube:不良林)
       - 🇻🇳 越南-1.78MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 捷克-5.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 捷克-5.30MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 台湾-9.86MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.35MB/s(Youtube:不良林)
       - 🇻🇳 越南-1.78MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 捷克-5.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 捷克-5.30MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 台湾-9.86MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.35MB/s(Youtube:不良林)
       - 🇻🇳 越南-1.78MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 捷克-5.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.31MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 捷克-5.30MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 台湾-9.86MB/s(Youtube:不良林)
       - 🇨🇳 中国-11.35MB/s(Youtube:不良林)
       - 🇻🇳 越南-1.78MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
